--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
   <!-- Footer -->
   <footer>
     <div class="footer-left">
-      <a href="#"><img src="img/clubbedtodeath.jpg" alt="artist"></a>
+      <a href="https://www.youtube.com/watch?v=pFS4zYWxzNA" target="_blank"><img src="img/clubbedtodeath.jpg" alt="artist"></a>
       <div class="artist-playing">
         <a href="#"><h4 class="white-txt">Rob Dougan</h4></a>
-        <a href="#"><p class="grey-txt">Clubbed To Death</p></a>
+        <a href="https://www.youtube.com/watch?v=pFS4zYWxzNA" target="_blank"><p class="grey-txt">Clubbed To Death</p></a>
       </div>
       <div class="like-save">
         <a href="#"><i class="far fa-heart"></i></a>
