--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
   <main>
+    <!-- Aside -->
     <aside>
+      <!-- Top Nav -->
       <nav class="top-nav">
         <div class="logo">
           <a href="#"><i class="white-txt fab fa-spotify"></i></a>
@@ -38,6 +40,9 @@
           <a href="#"><p class="grey-txt">La tua libreria</p></a>
         </div>
       </nav>
+      <!-- /Top Nav -->
+
+      <!-- Central Nav -->
       <nav class="central-nav">
         <a href="#"><h4 class="white-txt">PLAYLIST</h4></a>
         <div class="row playlist-plus">
@@ -53,6 +58,9 @@
           <li class="grey-txt">Nome Playlist</li>
         </ul>
       </nav>
+      <!-- /Central Nav -->
+
+      <!-- Bottom Nav -->
       <nav class="bottom-nav">
         <div class="row">
           <a href="#"><i class="grey-txt fas fa-arrow-circle-down"></i></a>
@@ -64,12 +72,19 @@
           <a href="#"><p class="white-txt">Jane Doe</p></a>
         </div>
       </nav>
+      <!-- /Bottom Nav -->
     </aside>
+    <!-- /Aside -->
+
+    <!-- Main Content -->
     <div class="main-content">
       <div class="banner">
         <button class="upgrade-btn btn white-txt" type="button" name="button">EFFETTUA L'UPGRADE</button>
       </div>
+
+      <!-- Inner Content -->
       <div class="inner-content">
+        <!-- Categories -->
         <ul class="categories">
           <li class="underline">IN EVIDENZA</li>
           <li>PODCAST</li>
@@ -78,6 +93,9 @@
           <li>NUOVE USCITE</li>
           <li>SCOPRI</li>
         </ul>
+        <!-- /Categories -->
+
+        <!-- 1st Carousel-->
         <div class="container">
           <h2 class="white-txt">Recently played</h2>
           <div class="carousel">
@@ -131,6 +149,9 @@
             </div>
           </div>
         </div>
+        <!-- /1st Carousel-->
+
+        <!-- 2nd Carousel-->
         <div class="container">
           <h2 class="white-txt">Creato per Jane Doe</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
@@ -153,6 +174,9 @@
             </div>
           </div>
         </div>
+        <!-- 2nd Carousel-->
+
+        <!-- 3rd Carousel-->
         <div class="container">
           <h2 class="white-txt">Artisti più popolari</h2>
           <p>Più ascolti, più curati saranno i suggerimenti.</p>
@@ -175,12 +199,16 @@
             </div>
           </div>
         </div>
+        <!-- 3rd Carousel-->
       </div>
+      <!-- /Inner Content -->
     </div>
   </main>
+  <!-- /Main Content -->
 
   <!-- Footer -->
   <footer>
+    <!-- Footer Left -->
     <div class="footer-left">
       <a href="https://www.youtube.com/watch?v=pFS4zYWxzNA" target="_blank"><img src="img/clubbedtodeath.jpg" alt="artist"></a>
       <div class="artist-playing">
@@ -192,6 +220,9 @@
         <a href="#"><i class="far fa-folder"></i></a>
       </div>
     </div>
+    <!-- /Footer Left -->
+
+    <!-- Footer Central -->
     <div class="footer-central">
       <div class="player-control">
         <div class="play-button">
@@ -210,6 +241,9 @@
         </div>
       </div>
     </div>
+    <!-- /Footer Central -->
+
+    <!-- Footer Right -->
     <div class="footer-right">
       <a href="#"><i class="white-txt fas fa-list"></i></a>
       <a href="#"><i class="white-txt fas fa-desktop"></i></a>
@@ -220,8 +254,8 @@
         </div>
       </div>
     </div>
+    <!-- /Footer Right -->
   </footer>
   <!-- /Footer -->
-
 </body>
 </html>
